--- a/lang/cs.json
+++ b/lang/cs.json
@@ -9,8 +9,8 @@
     "CHARAC.Size": "Velikost",
     "CHARAC.DEX": "OBR",
     "CHARAC.Dexterity": "Obratnost",
-    "CHARAC.APP": "VZH",
-    "CHARAC.Appearance": "Vzhled",
+    "CHARAC.APP": "KRÁ",
+    "CHARAC.Appearance": "Krása",
     "CHARAC.INT": "INT",
     "CHARAC.Intelligence": "Inteligence",
     "CHARAC.POW": "TVR",
