oprava EDU na VZD

--- a/lang/cs.json
+++ b/lang/cs.json
@@ -15,8 +15,8 @@
     "CHARAC.Intelligence": "Inteligence",
     "CHARAC.POW": "TVR",
     "CHARAC.Power": "Tvrdost",
-    "CHARAC.EDU": "EDU",
-    "CHARAC.Education": "Vzdělání (EDU)",
+    "CHARAC.EDU": "VZD",
+    "CHARAC.Education": "Vzdělání (VZD)",
     "CoC7.Name": "Jméno",
     "CoC7.Archetype": "Archetyp",
     "CoC7.Occupation": "Povolání",
@@ -283,7 +283,7 @@
     "CoC7.SkillNoXpGain": "Žádný zisk XP",
     "CoC7.SkillSpecial": "Specializace",
     "CoC7.SkillRarity": "Neobvyklé",
-    "CoC7.SkillPush": "Tlačil",
+    "CoC7.SkillPush": "Oponování",
     "CoC7.SkillCombat": "Boj",
     "CoC7.SkillFighting": "Souboj",
     "CoC7.SkillFirearm": "Střelné zbraně",
