--- a/lang/cs.json
+++ b/lang/cs.json
@@ -264,7 +264,7 @@
     "CoC7.WeaponUsesPerRound": "Použití v rámci kola",
     "CoC7.WeaponUsesPerRoundHint": "Útoky během kola (1/3 = útok každé 3 kola)",
     "CoC7.WeaponSheet.RoundsPerUse.Info": "Kolik kol je potřeba, aby byla zbraň připravena střílet",
-    "CoC7.WeaponMax": "Maximální počet použití / kolo",
+    "CoC7.WeaponMax": "Max. použití/kolo",
     "CoC7.BurstSize": "Velikost dávky",
     "CoC7.BurstSizeHint": "Kolik střel na dávku",
     "CoC7.WeaponBulletsInMag": "Zásobník",
@@ -287,7 +287,7 @@
     "CoC7.SkillCombat": "Boj",
     "CoC7.SkillFighting": "Souboj",
     "CoC7.SkillFirearm": "Střelné zbraně",
-    "CoC7.WeaponRngd": "Dostřel",
+    "CoC7.WeaponRngd": "Střelné",
     "CoC7.WeaponProperyManeuver": "Manévr",
     "CoC7.WeaponTouch": "Dotek",
     "CoC7.WeaponImpl": "Napíchnout",
@@ -304,7 +304,7 @@
     "CoC7.WeaponBlst": "Výbuch",
     "CoC7.WeaponStun": "Omráčit",
     "CoC7.Weapon.Property.Melee": "Rvačka",
-    "CoC7.Weapon.Property.Thrown": "Hodil",
+    "CoC7.Weapon.Property.Thrown": "Vrh",
     "CoC7.Weapon.Property.Burn": "Shořela",
     "CoC7.Weapon.Property.Shotgun": "Brokovnice",
     "CoC7.ErrorItem": "Položku se nepodařilo najít",
