--- a/lang/cs.json
+++ b/lang/cs.json
@@ -104,7 +104,7 @@
     "CoC7.HardSuccess": "Vysoký úspěch",
     "CoC7.ExtremeSuccess": "Extrémní úspěch",
     "CoC7.CriticalSuccess": "Kritický úspěch",
-    "CoC7.Fumble": "Smůla",
+    "CoC7.Fumble": "Ext. neúspěch",
     "CoC7.Failure": "Neúspěch",
     "CoC7.Malfunction": "{itemName} měl/a poruchu",
     "CoC7.Dice": "Kostka",
@@ -305,7 +305,7 @@
     "CoC7.WeaponStun": "Omráčit",
     "CoC7.Weapon.Property.Melee": "Rvačka",
     "CoC7.Weapon.Property.Thrown": "Vrh",
-    "CoC7.Weapon.Property.Burn": "Shořela",
+    "CoC7.Weapon.Property.Burn": "Vzplanutí",
     "CoC7.Weapon.Property.Shotgun": "Brokovnice",
     "CoC7.ErrorItem": "Položku se nepodařilo najít",
     "CoC7.ErrorActor": "Herce se nepodařilo najít",
