--- a/lang/cs.json
+++ b/lang/cs.json
@@ -182,7 +182,7 @@
     "CoC7.BonusDamageRoll": "Hod na bonusové zranění",
     "CoC7.Type": "Typ",
     "CoC7.FightBack": "Protiúder",
-    "CoC7.Dodge": "Uhybání",
+    "CoC7.Dodge": "Dodge",
     "CoC7.Maneuver": "Manévrování",
     "CoC7.OutNumbered": "Přesílený",
     "CoC7.combatCard.surprised": "Překvapený",
