--- a/lang/cs.json
+++ b/lang/cs.json
@@ -104,7 +104,7 @@
     "CoC7.HardSuccess": "Vysoký úspěch",
     "CoC7.ExtremeSuccess": "Extrémní úspěch",
     "CoC7.CriticalSuccess": "Kritický úspěch",
-    "CoC7.Fumble": "Ext. neúspěch",
+    "CoC7.Fumble": "Smůla",
     "CoC7.Failure": "Neúspěch",
     "CoC7.Malfunction": "{itemName} měl/a poruchu",
     "CoC7.Dice": "Kostka",
@@ -182,6 +182,7 @@
     "CoC7.BonusDamageRoll": "Hod na bonusové zranění",
     "CoC7.Type": "Typ",
     "CoC7.FightBack": "Protiúder",
+    "CoC7.Dodge": "Uhýbání",
     "CoC7.Maneuver": "Manévrování",
     "CoC7.OutNumbered": "Přesílený",
     "CoC7.combatCard.surprised": "Překvapený",
@@ -304,7 +305,7 @@
     "CoC7.WeaponStun": "Omráčit",
     "CoC7.Weapon.Property.Melee": "Rvačka",
     "CoC7.Weapon.Property.Thrown": "Vrh",
-    "CoC7.Weapon.Property.Burn": "Vzplanutí",
+    "CoC7.Weapon.Property.Burn": "Shořela",
     "CoC7.Weapon.Property.Shotgun": "Brokovnice",
     "CoC7.ErrorItem": "Položku se nepodařilo najít",
     "CoC7.ErrorActor": "Herce se nepodařilo najít",
@@ -313,6 +314,7 @@
     "CoC7.Validate": "Ověřit",
     "CoC7.Apply": "Aplikovat",
     "CoC7.NewBioSectionName": "Nová sekce",
+    "CoC7.DodgeSkillName": "Uhýbání",
     "CoC7.CthulhuMythosName": "Cthulhu Mythos",
     "CoC7.CreditRatingSkillName": "Zámožnost",
     "CoC7.FightingSpecializationName": "Boj na blízko",
@@ -555,6 +557,7 @@
     "CoC7.magicPointsRecovered": "Magické body byly obnoveny",
     "CoC7.hasCriticalWounds": "Kvůli kritickým ranám nelze získat životy",
     "CoC7.quickHealer": "Rychlý léčitel",
+    "CoC7.ErrorNoDodgeSkill": "Herec nemá schopnost vyhýbat se",
     "CoC7.ErrorNotEnoughLuck": "{actor} nemá dostatek štěstí aby prošel kontrolou",
     "CoC7.ErrorManeuverNotPossible": "Váš protivník je příliš silný na to, abyste provedli manévr",
     "CoC7.ErrorNotFound": "{chybí} nebyl nalezen!",
