--- a/lang/cs.json
+++ b/lang/cs.json
@@ -128,7 +128,7 @@
     "CoC7.check.AutoSuccess": "Auto. úspěch",
     "CoC7.check.AutoFailure": "Auto. neúspěch",
     "CoC7.RevealCheck": "Zobrazit kontrolu",
-    "CoC7.RevealSanLoss": "Zobrazit ztrátu PŘČ",
+    "CoC7.RevealSanLoss": "Zobrazit ztrátu PŘÍ",
     "CoC7.check.ForcePass": "Vynucený úspěch",
     "CoC7.check.ForceFail": "Vynucený neúspěch",
     "CoC7.check.FlagForDevelopment": "Zisk zkušeností",
@@ -138,7 +138,7 @@
     "CoC7.KeeperSentDecoy": "Falešný hod odeslán hráčům",
     "CoC7.FakeRoll": "Odeslat falešný hod hráčům",
     "CoC7.ConstitutionCheck": "Kontrola odolnosti",
-    "CoC7.SanDataSelectionWindow": "Vyber ztrátu PŘČ",
+    "CoC7.SanDataSelectionWindow": "Vyber ztrátu PŘÍ",
     "CoC7.BonusSelectionWindow": "Okno výběru bonusu",
     "CoC7.BonusSelectionWindowNamed": "Vyber modifikátor pro kontrolu {name}",
     "CoC7.SkillDetailsWindow": "Okno podrobností o dovednostech",
@@ -365,17 +365,17 @@
     "CoC7.UseFormula": "Použijte kostky",
     "CoC7.EnterFormula": "Zadejte vzorec",
     "CoC7.SanRollHint": "Hoďte na kontrolu PRČ",
-    "CoC7.SANCheckTitle": "Ztráta PŘČ: {name} ({sanMin} / {sanMax})",
+    "CoC7.SANCheckTitle": "Ztráta PŘÍ: {name} ({sanMin} / {sanMax})",
     "CoC7.NoSkill": "Žádná dovednost",
     "CoC7.AddWeapontHint": "<p> {actor} nemá {weapon}. <br> Chcete ji vytvořit?</p>",
     "CoC7.LinkCheck": " {name} kontrola",
     "CoC7.LinkCheckDiff": "[{difficulty}] {name} kontrola",
     "CoC7.LinkCheckModif": " {name} kontrola({modifier})",
     "CoC7.LinkCheckDiffModif": "[{difficulty}] {name} kontrola({modifier})",
-    "CoC7.LinkSanLoss": " ztráta PŘČ ({sanMin} / {sanMax})",
-    "CoC7.LinkSanLossDiff": "[{difficulty}] ztráta PŘČ ({sanMin}/{sanMax})",
-    "CoC7.LinkSanLossModif": " ztráta PŘČ ({modifier}) ({sanMin}/{sanMax})",
-    "CoC7.LinkSanLossDiffModif": "[{difficulty}] ztráta PŘČ ({modifier}) ({sanMin}/{sanMax})",
+    "CoC7.LinkSanLoss": " ztráta PŘÍ ({sanMin} / {sanMax})",
+    "CoC7.LinkSanLossDiff": "[{difficulty}] ztráta PŘÍ ({sanMin}/{sanMax})",
+    "CoC7.LinkSanLossModif": " ztráta PŘÍ ({modifier}) ({sanMin}/{sanMax})",
+    "CoC7.LinkSanLossDiffModif": "[{difficulty}] ztráta PŘÍ ({modifier}) ({sanMin}/{sanMax})",
     "CoC7.LinkItem": " {name}",
     "CoC7.LinkItemDiff": "[{difficulty}] {name}",
     "CoC7.LinkItemModif": " {name} ({modifier})",
@@ -401,8 +401,8 @@
     "CoC7.InvoluntaryActionPerfomed": "Byla provedena nedobrovolná akce",
     "CoC7.SanityCheck": "Ověření reality",
     "CoC7.IntCheck": "Kontrola inteligence",
-    "CoC7.NoSanLoss": "Bez ztráty PŘČ",
-    "CoC7.SANLoss": "Ztráta PŘČ",
+    "CoC7.NoSanLoss": "Bez ztráty PŘÍ",
+    "CoC7.SANLoss": "Ztráta PŘÍ",
     "CoC7.SanityCheckPerformed": "Byl/a jsi vystaven/a traumatické události",
     "CoC7.InvoluntaryActionPerformed": "Na okamžik jsi ztratil/a sebekontrolu.",
     "CoC7.SanityLost": "Ztráta bodu PŘÍ",
@@ -666,5 +666,5 @@
     "SETTINGS.AdviseOwnersOnly": "Upozornit vlastníka postavy",
     "SETTINGS.AdviseAllPlayer": "Upozornit všechny hráče",
     "SETTINGS.OneBlockBackStory": "Jeden blok pro příbeh postavy",
-    "SETTINGS.OneBlockBackStoryHint": "Přepně příběh postavy do jednoho pole, ve kterém můžete formátovat obsah/přidávat odkazy."
+    "SETTINGS.OneBlockBackStoryHint": "Přepne příběh postavy do jednoho pole, ve kterém můžete formátovat obsah/přidávat odkazy."
 }
